<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/appbackground_19_nature_outdoors">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#C3EEFA"
        android:fontFamily="serif"
        android:text="RESERVATION"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        android:typeface="normal" />
    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:text="  Name:"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/EnterName"
        android:inputType="text" />

    <TextView
        android:id="@+id/textNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:text="  Mobile Number: "
        android:textSize="18dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/EnterNumber"
        android:inputType="text" />

    <TextView
        android:id="@+id/textSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:text="  Group Size:"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/editTextSize"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/EnterGroupSize"
        android:inputType="text" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:text="  Date:"
        android:textSize="18dp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:text="  Time:"
        android:textSize="18dp" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:timePickerMode="spinner" />

    <TextView
        android:id="@+id/textSmoking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:text="  Smoking Area:"
        android:textSize="18dp" />

    <RadioGroup
        android:id="@+id/smokingRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/smokingYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/YesSmoking" />

        <RadioButton
            android:id="@+id/smokingNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoSmoking" />
    </RadioGroup>

    <TextView
        android:id="@+id/textRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:text="  Additonal Requirement:"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/editTextRequest"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/EnterRequest"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ConfirmBooking" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reset" />
    </LinearLayout>

</LinearLayout>
